--- a/index.html
+++ b/index.html
@@ -2,48 +2,109 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Your Name - Data Analyst Portfolio</title>
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        h1 { color: #175b96; }
-        .container { width: 80%; margin: auto; padding: 20px; }
-        .section { margin: 40px 0; }
+        body {
+            background-color: #f8f9fa;
+        }
+        .hero {
+            background-color: #175b96;
+            color: white;
+            padding: 60px 0;
+            text-align: center;
+        }
+        .section {
+            padding: 40px 0;
+        }
+        .footer {
+            background-color: #343a40;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 40px;
+        }
     </style>
 </head>
 <body>
-    <h1>Your Name</h1>
-    <h2>Data Analyst Portfolio</h2>
-    <p>Welcome to my portfolio! I'm an aspiring data analyst with skills in SQL, Python, R, and data visualization.</p>
 
-    <div class="container">
-        <div class="section">
-            <h3>About Me</h3>
-            <p>Brief introduction about yourself.</p>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Your Name</h1>
+            <h3>Data Analyst Portfolio</h3>
+            <p>Turning data into insights with SQL, Python, R, and visualization tools.</p>
         </div>
+    </section>
 
-        <div class="section">
-            <h3>Skills</h3>
-            <ul>
-                <li>SQL</li>
-                <li>Python</li>
-                <li>R</li>
-                <li>Google Sheets</li>
-                <li>Tableau / Power BI</li>
-            </ul>
+    <!-- About Section -->
+    <section class="section text-center">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>A brief introduction about yourself, your career goals, and why you love data analysis.</p>
         </div>
+    </section>
 
-        <div class="section">
-            <h3>Projects</h3>
+    <!-- Skills Section -->
+    <section class="section bg-light text-center">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>SQL</h4>
+                </div>
+                <div class="col-md-4">
+                    <h4>Python</h4>
+                </div>
+                <div class="col-md-4">
+                    <h4>R</h4>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-4">
+                    <h4>Tableau / Power BI</h4>
+                </div>
+                <div class="col-md-4">
+                    <h4>Google Sheets</h4>
+                </div>
+                <div class="col-md-4">
+                    <h4>BigQuery</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="section text-center">
+        <div class="container">
+            <h2>Projects</h2>
             <p>Coming soon...</p>
+            <p>Once I complete projects, they will be listed here with links to GitHub.</p>
         </div>
+    </section>
 
-        <div class="section">
-            <h3>Contact</h3>
+    <!-- Contact Section -->
+    <section class="section bg-light text-center">
+        <div class="container">
+            <h2>Contact</h2>
             <p>Email: your.email@example.com</p>
             <p>LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">Your LinkedIn</a></p>
             <p>GitHub: <a href="https://github.com/your-username" target="_blank">Your GitHub</a></p>
         </div>
-    </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
+
