--- a/index.html
+++ b/index.html
@@ -2,109 +2,148 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Your Name - Data Analyst Portfolio</title>
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .hero {
-            background-color: #175b96;
-            color: white;
-            padding: 60px 0;
-            text-align: center;
-        }
-        .section {
-            padding: 40px 0;
-        }
-        .footer {
-            background-color: #343a40;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shawn Olivier | Data Analyst</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">SO</a>
+        </div>
+        <div class="nav-links">
+            <a href="index.html" class="active">Home</a>
+            <a href="about.html">About</a>
+            <a href="skills.html">Skills</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="container">
-            <h1>Your Name</h1>
-            <h3>Data Analyst Portfolio</h3>
-            <p>Turning data into insights with SQL, Python, R, and visualization tools.</p>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="section text-center">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>A brief introduction about yourself, your career goals, and why you love data analysis.</p>
-        </div>
-    </section>
-
-    <!-- Skills Section -->
-    <section class="section bg-light text-center">
-        <div class="container">
-            <h2>Skills</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <h4>SQL</h4>
-                </div>
-                <div class="col-md-4">
-                    <h4>Python</h4>
-                </div>
-                <div class="col-md-4">
-                    <h4>R</h4>
-                </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-md-4">
-                    <h4>Tableau / Power BI</h4>
-                </div>
-                <div class="col-md-4">
-                    <h4>Google Sheets</h4>
-                </div>
-                <div class="col-md-4">
-                    <h4>BigQuery</h4>
-                </div>
+    <header class="hero">
+        <div class="hero-content animate__animated animate__fadeIn">
+            <h1>Shawn Olivier</h1>
+            <h2 class="typing-text">Data Analyst</h2>
+            <p>Transforming raw data into meaningful insights</p>
+            <div class="hero-buttons">
+                <a href="projects.html" class="btn primary-btn">View Projects</a>
+                <a href="contact.html" class="btn secondary-btn">Contact Me</a>
             </div>
         </div>
-    </section>
+        <div class="hero-image animate__animated animate__slideInRight">
+            <div class="data-visual">
+                <!-- SVG data visualization placeholder -->
+                <svg width="300" height="300" viewBox="0 0 100 100">
+                    <circle cx="50" cy="50" r="40" class="animated-circle" />
+                    <path d="M20,50 L80,50 M50,20 L50,80" class="animated-lines" />
+                    <rect x="30" y="30" width="10" height="40" class="animated-bar" />
+                    <rect x="45" y="20" width="10" height="60" class="animated-bar" />
+                    <rect x="60" y="35" width="10" height="30" class="animated-bar" />
+                </svg>
+            </div>
+        </div>
+    </header>
 
-    <!-- Projects Section -->
-    <section class="section text-center">
-        <div class="container">
-            <h2>Projects</h2>
-            <p>Coming soon...</p>
-            <p>Once I complete projects, they will be listed here with links to GitHub.</p>
+    <!-- Featured Skills Section -->
+    <section class="skills-preview">
+        <h2>Key Skills</h2>
+        <div class="skills-container">
+            <div class="skill-card animate__animated animate__fadeInUp">
+                <i class="fas fa-database"></i>
+                <h3>SQL</h3>
+                <div class="skill-level">
+                    <div class="skill-progress" style="width: 85%"></div>
+                </div>
+            </div>
+            <div class="skill-card animate__animated animate__fadeInUp" style="animation-delay: 0.2s">
+                <i class="fab fa-python"></i>
+                <h3>Python</h3>
+                <div class="skill-level">
+                    <div class="skill-progress" style="width: 80%"></div>
+                </div>
+            </div>
+            <div class="skill-card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
+                <i class="fas fa-chart-line"></i>
+                <h3>Tableau</h3>
+                <div class="skill-level">
+                    <div class="skill-progress" style="width: 75%"></div>
+                </div>
+            </div>
+        </div>
+        <div class="center-btn">
+            <a href="skills.html" class="btn text-btn">See All Skills <i class="fas fa-arrow-right"></i></a>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section class="section bg-light text-center">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>Email: your.email@example.com</p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">Your LinkedIn</a></p>
-            <p>GitHub: <a href="https://github.com/your-username" target="_blank">Your GitHub</a></p>
+    <!-- Project Placeholders Section -->
+    <section class="projects-preview">
+        <h2>Future Projects</h2>
+        <div class="projects-container">
+            <div class="project-card animate__animated animate__fadeInUp">
+                <div class="project-image placeholder">
+                    <i class="fas fa-chart-pie"></i>
+                </div>
+                <div class="project-info">
+                    <h3>Sales Data Analysis</h3>
+                    <p>Coming soon: Analysis of sales trends and customer behavior</p>
+                    <div class="project-tags">
+                        <span>SQL</span>
+                        <span>Tableau</span>
+                        <span>Excel</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card animate__animated animate__fadeInUp" style="animation-delay: 0.3s">
+                <div class="project-image placeholder">
+                    <i class="fas fa-users"></i>
+                </div>
+                <div class="project-info">
+                    <h3>Customer Segmentation</h3>
+                    <p>Coming soon: Identify customer segments using clustering algorithms</p>
+                    <div class="project-tags">
+                        <span>Python</span>
+                        <span>R</span>
+                        <span>Machine Learning</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="center-btn">
+            <a href="projects.html" class="btn text-btn">Explore All Projects <i class="fas fa-arrow-right"></i></a>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-info">
+                <h3>Shawn Olivier</h3>
+                <p>Data Analyst</p>
+                <p>vhoshawn@gmail.com</p>
+                <p>076 031 9528</p>
+            </div>
+            <div class="social-links">
+                <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2025 Shawn Olivier. All rights reserved.</p>
+        </div>
     </footer>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
-
