--- a/skills.html
+++ b/skills.html
@@ -91,6 +91,9 @@
                             <p>Power BI</p>
                             <p>70%</p>
                         </div>
+                            <div class="skill-bar">
+                            <div class="skill-fill" style="width: 70%"></div>
+                        </div>
                     </div>
                 </div>
             </div>
