--- a/projects.html
+++ b/projects.html
@@ -1,73 +1,116 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Projects | Shawn Olivier</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="projects.html" class="active">Projects</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<section id="projects" class="projects-section">
+  <h2 class="section-title">Projects</h2>
 
-  <main>
-    <section class="page-title">
-      <h1>Projects</h1>
-      <p>Explore my completed and upcoming data analysis projects.</p>
-    </section>
+  <div class="project">
+    <h3 class="project-title">Mastercard Job Simulation – Data-Driven Strategy</h3>
+    <p class="project-description">
+      A virtual internship with Forage focused on analyzing customer trends for a fictional product campaign. Insights guided Mastercard's marketing and engagement strategies.
+    </p>
+    <ul class="project-insights">
+      <li>Objective: Analyze customer transaction data to uncover insights on product adoption.</li>
+      <li>Tools: Excel, SQL, PowerPoint</li>
+      <li>Insight: Identified peak engagement channels and customer segments to target for future campaigns.</li>
+    </ul>
+  </div>
 
-    <section class="projects-grid">
-      <!-- Mastercard Project -->
-      <div class="project-card">
-        <h2>Mastercard Data & Services Job Simulation</h2>
-        <p><strong>Objective:</strong> Analyze transaction trends and customer behavior to deliver data-driven insights for a client presentation.</p>
-        <p><strong>Key Insights:</strong> Identified a drop in weekend transaction volumes; recommended strategic loyalty incentives based on customer segments.</p>
-        <p><strong>Tools:</strong> Excel, PowerPoint</p>
-        <a href="https://github.com/yourusername/mastercard-simulation" target="_blank">View Project</a>
-      </div>
+  <div class="project">
+    <h3 class="project-title">Deloitte Job Simulation – Data Analysis and Risk Advisory</h3>
+    <p class="project-description">
+      Participated in Deloitte's Forage job simulation to assess financial data and fraud risk.
+    </p>
+    <ul class="project-insights">
+      <li>Objective: Perform risk analysis using Excel to support client advisory.</li>
+      <li>Tools: Excel, Risk Matrix</li>
+      <li>Insight: Identified high-risk areas and suggested internal controls to mitigate fraud.</li>
+    </ul>
+  </div>
 
-      <!-- Deloitte Project -->
-      <div class="project-card">
-        <h2>Deloitte Technology Consulting Virtual Internship</h2>
-        <p><strong>Objective:</strong> Evaluate client challenges, analyze business needs, and propose a suitable technology-driven solution.</p>
-        <p><strong>Key Insights:</strong> Recommended Microsoft Power BI for efficient reporting and scalability; justified tool selection based on user-friendly dashboards.</p>
-        <p><strong>Tools:</strong> PowerPoint, MS Office</p>
-        <a href="https://github.com/yourusername/deloitte-internship" target="_blank">View Project</a>
-      </div>
+  <div class="project">
+    <h3 class="project-title">Tata Insights – Business Intelligence Simulation</h3>
+    <p class="project-description">
+      Analyzed sales and supply chain data for Tata Group during a Forage job simulation. Delivered business recommendations to enhance performance.
+    </p>
+    <ul class="project-insights">
+      <li>Objective: Evaluate KPIs and suggest improvements in supply chain management.</li>
+      <li>Tools: Excel, Power BI</li>
+      <li>Insight: Improved stock allocation and supplier efficiency using dashboard visuals.</li>
+    </ul>
+  </div>
 
-      <!-- TCS Project -->
-      <div class="project-card">
-        <h2>Tata Consultancy Services Data Visualization Simulation</h2>
-        <p><strong>Objective:</strong> Help clients extract meaningful insights through effective data visualization using Tableau.</p>
-        <p><strong>Key Insights:</strong> Highlighted regional sales discrepancies; suggested marketing focus on underperforming regions with high customer churn.</p>
-        <p><strong>Tools:</strong> Tableau, Excel, PowerPoint</p>
-        <a href="https://github.com/yourusername/tcs-visualization" target="_blank">View Project</a>
-      </div>
-    </section>
+  <div class="project">
+    <h3 class="project-title">Leaf Product Usage Analysis (Google Capstone) – Coming Soon</h3>
+    <p class="project-description">
+      An upcoming project for the Google Analytics Certificate focusing on fitness data to drive product strategy.
+    </p>
+    <ul class="project-insights">
+      <li>Objective: Analyze Fitbit user behavior and suggest product engagement improvements.</li>
+      <li>Tools: R (tidyverse, ggplot2), SQL, Excel</li>
+    </ul>
+  </div>
 
-    <section class="upcoming-projects">
-      <h2>Upcoming Projects</h2>
-      <div class="project-card">
-        <h3>South African Employment & Skills Dashboard</h3>
-        <p><strong>Goal:</strong> Analyze job market data to understand in-demand skills, sector growth trends, and unemployment demographics.</p>
-        <p><strong>Tools:</strong> SQL, Excel, Power BI, Python</p>
-        <p><strong>Status:</strong> In Progress</p>
-      </div>
-    </section>
-  </main>
+  <div class="project">
+    <h3 class="project-title">Gauteng Real Estate ROI Analysis – Coming Soon</h3>
+    <p class="project-description">
+      This project will identify top-performing investment areas in Gauteng using rental yield, price appreciation, and demand metrics.
+    </p>
+    <ul class="project-insights">
+      <li>Objective: Help investors find suburbs with highest ROI.</li>
+      <li>Tools: R, Excel, Stats SA, TPN Reports, Web scraping</li>
+      <li>Approach: Combine public datasets and property listing data to calculate yield and growth rates.</li>
+    </ul>
+  </div>
 
-  <footer>
-    <p>© 2025 Shawn Olivier. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+  <div class="project">
+    <h3 class="project-title">South African Unemployment Rate Analysis – Coming Soon</h3>
+    <p class="project-description">
+      A data analytics project focused on analyzing unemployment trends across provinces to uncover skills gaps and inform policy.
+    </p>
+    <ul class="project-insights">
+      <li>Objective: Identify provinces with the highest unemployment rates and link them to education or skill shortages.</li>
+      <li>Tools: R, Excel, Stats SA data, Google Data Studio</li>
+      <li>Outcome: Develop interactive visuals and maps to show unemployment dynamics by region.</li>
+    </ul>
+  </div>
+</section>
+
+<style>
+.projects-section {
+  padding: 40px;
+  background-color: #f9f9f9;
+  font-family: 'Poppins', sans-serif;
+}
+
+.section-title {
+  font-size: 28px;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 30px;
+}
+
+.project {
+  background: #fff;
+  border-left: 4px solid #0d6efd;
+  margin-bottom: 30px;
+  padding: 20px 25px;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.05);
+}
+
+.project-title {
+  font-size: 22px;
+  color: #175b96;
+  margin-bottom: 10px;
+}
+
+.project-description {
+  font-size: 16px;
+  color: #4a4a4a;
+  margin-bottom: 15px;
+}
+
+.project-insights li {
+  font-size: 15px;
+  margin-bottom: 8px;
+  color: #333;
+}
+</style>
