--- a/projects.html
+++ b/projects.html
@@ -1,116 +1,76 @@
-<section id="projects" class="projects-section">
-  <h2 class="section-title">Projects</h2>
+<section id="projects">
+  <h2>Projects</h2>
 
   <div class="project">
-    <h3 class="project-title">Mastercard Job Simulation – Data-Driven Strategy</h3>
-    <p class="project-description">
+    <h3>Mastercard Job Simulation – Data-Driven Strategy</h3>
+    <p>
       A virtual internship with Forage focused on analyzing customer trends for a fictional product campaign. Insights guided Mastercard's marketing and engagement strategies.
     </p>
-    <ul class="project-insights">
-      <li>Objective: Analyze customer transaction data to uncover insights on product adoption.</li>
-      <li>Tools: Excel, SQL, PowerPoint</li>
-      <li>Insight: Identified peak engagement channels and customer segments to target for future campaigns.</li>
+    <ul>
+      <li><strong>Objective:</strong> Analyze customer transaction data to uncover insights on product adoption.</li>
+      <li><strong>Tools:</strong> Excel, SQL, PowerPoint</li>
+      <li><strong>Insight:</strong> Identified peak engagement channels and customer segments to target for future campaigns.</li>
     </ul>
   </div>
 
   <div class="project">
-    <h3 class="project-title">Deloitte Job Simulation – Data Analysis and Risk Advisory</h3>
-    <p class="project-description">
+    <h3>Deloitte Job Simulation – Data Analysis and Risk Advisory</h3>
+    <p>
       Participated in Deloitte's Forage job simulation to assess financial data and fraud risk.
     </p>
-    <ul class="project-insights">
-      <li>Objective: Perform risk analysis using Excel to support client advisory.</li>
-      <li>Tools: Excel, Risk Matrix</li>
-      <li>Insight: Identified high-risk areas and suggested internal controls to mitigate fraud.</li>
+    <ul>
+      <li><strong>Objective:</strong> Perform risk analysis using Excel to support client advisory.</li>
+      <li><strong>Tools:</strong> Excel, Risk Matrix</li>
+      <li><strong>Insight:</strong> Identified high-risk areas and suggested internal controls to mitigate fraud.</li>
     </ul>
   </div>
 
   <div class="project">
-    <h3 class="project-title">Tata Insights – Business Intelligence Simulation</h3>
-    <p class="project-description">
+    <h3>Tata Insights – Business Intelligence Simulation</h3>
+    <p>
       Analyzed sales and supply chain data for Tata Group during a Forage job simulation. Delivered business recommendations to enhance performance.
     </p>
-    <ul class="project-insights">
-      <li>Objective: Evaluate KPIs and suggest improvements in supply chain management.</li>
-      <li>Tools: Excel, Power BI</li>
-      <li>Insight: Improved stock allocation and supplier efficiency using dashboard visuals.</li>
+    <ul>
+      <li><strong>Objective:</strong> Evaluate KPIs and suggest improvements in supply chain management.</li>
+      <li><strong>Tools:</strong> Excel, Power BI</li>
+      <li><strong>Insight:</strong> Improved stock allocation and supplier efficiency using dashboard visuals.</li>
     </ul>
   </div>
 
+  <h2>Upcoming Projects</h2>
+
   <div class="project">
-    <h3 class="project-title">Leaf Product Usage Analysis (Google Capstone) – Coming Soon</h3>
-    <p class="project-description">
+    <h3>Leaf Product Usage Analysis (Google Capstone)</h3>
+    <p>
       An upcoming project for the Google Analytics Certificate focusing on fitness data to drive product strategy.
     </p>
-    <ul class="project-insights">
-      <li>Objective: Analyze Fitbit user behavior and suggest product engagement improvements.</li>
-      <li>Tools: R (tidyverse, ggplot2), SQL, Excel</li>
+    <ul>
+      <li><strong>Objective:</strong> Analyze Fitbit user behavior and suggest product engagement improvements.</li>
+      <li><strong>Tools:</strong> R (tidyverse, ggplot2), SQL, Excel</li>
     </ul>
   </div>
 
   <div class="project">
-    <h3 class="project-title">Gauteng Real Estate ROI Analysis – Coming Soon</h3>
-    <p class="project-description">
+    <h3>Gauteng Real Estate ROI Analysis</h3>
+    <p>
       This project will identify top-performing investment areas in Gauteng using rental yield, price appreciation, and demand metrics.
     </p>
-    <ul class="project-insights">
-      <li>Objective: Help investors find suburbs with highest ROI.</li>
-      <li>Tools: R, Excel, Stats SA, TPN Reports, Web scraping</li>
-      <li>Approach: Combine public datasets and property listing data to calculate yield and growth rates.</li>
+    <ul>
+      <li><strong>Objective:</strong> Help investors find suburbs with highest ROI.</li>
+      <li><strong>Tools:</strong> R, Excel, Stats SA, TPN Reports, Web scraping</li>
+      <li><strong>Approach:</strong> Combine public datasets and property listing data to calculate yield and growth rates.</li>
     </ul>
   </div>
 
   <div class="project">
-    <h3 class="project-title">South African Unemployment Rate Analysis – Coming Soon</h3>
-    <p class="project-description">
+    <h3>South African Unemployment Rate Analysis</h3>
+    <p>
       A data analytics project focused on analyzing unemployment trends across provinces to uncover skills gaps and inform policy.
     </p>
-    <ul class="project-insights">
-      <li>Objective: Identify provinces with the highest unemployment rates and link them to education or skill shortages.</li>
-      <li>Tools: R, Excel, Stats SA data, Google Data Studio</li>
-      <li>Outcome: Develop interactive visuals and maps to show unemployment dynamics by region.</li>
+    <ul>
+      <li><strong>Objective:</strong> Identify provinces with the highest unemployment rates and link them to education or skill shortages.</li>
+      <li><strong>Tools:</strong> R, Excel, Stats SA data, Google Data Studio</li>
+      <li><strong>Outcome:</strong> Develop interactive visuals and maps to show unemployment dynamics by region.</li>
     </ul>
   </div>
 </section>
-
-<style>
-.projects-section {
-  padding: 40px;
-  background-color: #f9f9f9;
-  font-family: 'Poppins', sans-serif;
-}
-
-.section-title {
-  font-size: 28px;
-  font-weight: 600;
-  color: #333;
-  margin-bottom: 30px;
-}
-
-.project {
-  background: #fff;
-  border-left: 4px solid #0d6efd;
-  margin-bottom: 30px;
-  padding: 20px 25px;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.05);
-}
-
-.project-title {
-  font-size: 22px;
-  color: #175b96;
-  margin-bottom: 10px;
-}
-
-.project-description {
-  font-size: 16px;
-  color: #4a4a4a;
-  margin-bottom: 15px;
-}
-
-.project-insights li {
-  font-size: 15px;
-  margin-bottom: 8px;
-  color: #333;
-}
-</style>
