--- a/projects.html
+++ b/projects.html
@@ -503,8 +503,48 @@
                             <span>Q2 2025</span>
                         </div>
                         <div class="stat-item">
-                            <i class="fas fa-chart-line"></i>
-                            <span>10-Year Analysis</span>
+                            <i class="fas fa-calculator"></i>
+                            <span>ROI Analysis</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 5 - New SA Employment Dashboard -->
+            <div class="project-card-full" data-category="visualization python sql">
+                <div class="project-image-full">
+                    <div class="project-image-full placeholder">
+                        <i class="fas fa-briefcase"></i>
+                        <span class="coming-soon">SA Employment Dashboard</span>
+                    </div>
+                    <div class="project-overlay">
+                        <div class="project-links">
+                            <a href="#" class="btn primary-btn"><i class="fas fa-database"></i> SQL</a>
+                            <a href="#" class="btn secondary-btn"><i class="fas fa-chart-line"></i> Dashboard</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-info-full">
+                    <h3>South African Employment & Skills Dashboard</h3>
+                    <span class="project-status status-planned">Upcoming</span>
+                    <p>Analyze job market data from Stats SA, CareerJunction, and Kaggle to understand which skills are most in-demand, sector growth trends, and unemployment demographics. Interactive dashboard + insights report.</p>
+                    <div class="project-tags-full">
+                        <span>SQL</span>
+                        <span>BigQuery</span>
+                        <span>Excel</span>
+                        <span>Power BI</span>
+                        <span>Tableau</span>
+                        <span>Python</span>
+                        <span>Data Storytelling</span>
+                    </div>
+                    <div class="project-stats">
+                        <div class="stat-item">
+                            <i class="fas fa-calendar"></i>
+                            <span>Q2 2025</span>
+                        </div>
+                        <div class="stat-item">
+                            <i class="fas fa-flag"></i>
+                            <span>SA Market Focus</span>
                         </div>
                     </div>
                 </div>
